# st-eze

./: .gitignore  .project-words.txt  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  tests.yml
config/: crontab  nginx.conf  rabbitmq.conf
scripts/: get_price_stress_test.py
src/: constants.py  main-api.py  main-app.py  main-cli.py  task.py
src/.streamlit/: config.toml
src/core/db/: __init__.py  client.py  models.py
src/core/db/crud/: __init__.py  stock.py
src/core/eze/: __init__.py  stock.py
src/core/gfinance/: __init__.py  auth.py  exceptions.py  finance.py  types.py  validations.py
src/core/gsheet/: auth.py  types.py  utils.py
src/core/gsheets/: _gauth.py  _gsheets.py
src/core/utils/: __init__.py  umami.py
src/services/api/dependencies/: __init__.py  _db.py  _rate_limit.py  _round_robin.py
src/services/api/models/: __init__.py  errors.py  headers.py  query_params.py  responses.py
src/services/api/routers/v1/: __init__.py  stock.py  users.py
src/services/app/: __init__.py
src/services/app/components/: auth.py  coffee.py  logo.py  user.py
src/services/app/pages/: about.py  home.py
src/services/app/utils/: __init__.py
tests/: conftest.py  test_crud.py  test_gfinance.py  test_gsheet.py  test_sheets.py  test_validations.py
